# Net-browser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: feature_flags.yaml
docs/architecture/: ipc-protocol.md
docs/dev/: build-windows.md
docs/marketing/: positioning.md
gpu/shaders/: blur.glsl
proto/ipc/: browser_messages.proto  renderer_messages.proto
samples/xml/: WindowsPolicySample.xml
scripts/: build.ps1  build.sh  run_bridge.ps1  run_core.ps1  run_webui.ps1
src/bridge/NetBrowser.Bridge/: NetBrowser.Bridge.csproj  Program.cs
src/core/browser/app/: browser_main.cc  browser_process.cc  browser_process.h
src/ipc/include/: ipc.h
src/ipc/transport/: named_pipes_win.cc
src/platform/c_shim/include/: net_platform.h
src/platform/c_shim/win/: net_platform_win.c
src/rust/: Cargo.toml
src/rust/url_parser/: Cargo.toml
src/rust/url_parser/src/: lib.rs
src/ui/webui/public/: index.html
src/ui/webui/public/css/: style.css
src/ui/webui/public/js/: app.js
src/ui/windows_wpf/NetBrowser.Shell/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
src/ui/windows_wpf/NetBrowser.Shell/Services/: CoreIpcClient.cs
tests/smoke/: README.md
tools/lua/: automation.lua
tools/perl/: log_pipeline.pl
tools/python/: codegen.py
tools/tcl/: legacy_helper.tcl
